[package]
name = "julian"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.66"
description = "Convert between Julian day numbers and Julian & Gregorian calendars"
authors = ["John Thorvald Wodder II <julian-rs@varonathe.org>"]
repository = "https://github.com/jwodder/julian-rs"
license = "MIT"
keywords = ["calendar", "gregorian-calendar", "julian-calendar", "julian-day"]
categories = ["date-and-time"]
exclude = ["/.*"]

[dependencies]
chrono = { version = "0.4.24", optional = true, default-features = false }
thiserror = "1.0.40"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = { version = "0.17.0", default-features = false }
rstest_reuse = "0.5.0"

[build-dependencies]
csv = "1.2.1"
serde = { version = "1.0.160", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
