[package]
name = "julian"
version = "0.4.0-dev"
edition = "2021"
rust-version = "1.62"
description = "Convert between Julian day numbers and Julian & Gregorian calendars"
authors = ["John Thorvald Wodder II <julian-rs@varonathe.org>"]
repository = "https://github.com/jwodder/julian-rs"
license = "MIT"
keywords = ["calendar", "gregorian-calendar", "julian-calendar", "julian-day"]
categories = ["date-and-time"]
exclude = ["/.*"]
default-run = "julian"

[dependencies]
anyhow = { version = "1.0.71", optional = true }
chrono = { version = "0.4.26", optional = true, default-features = false }
csv = { version = "1.2.2", optional = true }
lexopt = { version = "0.3.0", optional = true }
serde = { version = "1.0.171", features = ["derive"], optional = true }
thiserror = "1.0.43"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.2"
rstest = { version = "0.18.1", default-features = false }
rstest_reuse = "0.6.0"

[features]
default = ["cli"]
cli = ["dep:lexopt"]
gentests = ["dep:anyhow", "dep:csv", "dep:serde"]

[[bin]]
name = "gentests"
required-features = ["gentests"]

[[bin]]
name = "julian"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
