[package]
name = "gentests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Generate test code for julian crate"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.82"
csv = "1.3.0"
serde = { version = "1.0.200", features = ["derive"] }

[lints]
workspace = true
