[package]
name = "julian"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Convert between Julian day numbers and Julian & Gregorian calendars"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["calendar", "gregorian-calendar", "julian-calendar", "julian-day"]
categories = ["date-and-time"]

[dependencies]
anyhow = { version = "1.0.82", optional = true }
chrono = { version = "0.4.38", optional = true, default-features = false }
csv = { version = "1.3.0", optional = true }
lexopt = { version = "0.3.0", optional = true }
serde = { version = "1.0.200", features = ["derive"], optional = true }
thiserror = "2.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.5"
rstest = { version = "0.23.0", default-features = false }
rstest_reuse = "0.7.0"

[features]
default = ["cli"]
chrono = ["dep:chrono"]
cli = ["dep:lexopt"]
gentests = ["dep:anyhow", "dep:csv", "dep:serde"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
