[package]
name = "julian"
version = "0.7.1"
edition.workspace = true
rust-version.workspace = true
description = "Convert between Julian day numbers and Julian & Gregorian calendars"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["calendar", "gregorian-calendar", "julian-calendar", "julian-day"]
categories = ["date-and-time"]

[dependencies]
chrono = { version = "0.4.38", optional = true, default-features = false }
thiserror = { version = "2.0.0", default-features = false }
time = { version = "0.3.37", default-features = false, optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = { version = "0.26.0", default-features = false }
rstest_reuse = "0.7.0"

[features]
default = ["std"]
chrono = ["dep:chrono"]
std = []
time = ["dep:time"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
